--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/DomainClassLibraryLab1/DomainClassLibraryLab1.sln
+/DomainClassLibraryLab1/TestsLR1/TestsLR1.csproj
