--- a/Recruitment/RecruitmentAgency/RecruitmentTests/RecruitmentTests.csproj
+++ b/Recruitment/RecruitmentAgency/RecruitmentTests/RecruitmentTests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecruitmentAgency\RecruitmentAgency.csproj" />
+  </ItemGroup>
+
 </Project>
