--- a/Fabric.Domain/Fabric.Test/Fabric.Test.csproj
+++ b/Fabric.Domain/Fabric.Test/Fabric.Test.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fabric.Domain\Fabric.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
