--- a/Non-residentialFund/Non-ResidentialFundTests/Non-ResidentialFundTests.csproj
+++ b/Non-residentialFund/Non-ResidentialFundTests/Non-ResidentialFundTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Non-residentialFundDomain\Non-residentialFundDomain.csproj" />
+  </ItemGroup>
+
 </Project>
