Реализован новый класс тестов

--- a/UniversityData/UniversityData.Tests/UniversityData.Tests.csproj
+++ b/UniversityData/UniversityData.Tests/UniversityData.Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UniversityData.Domain\UniversityData.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
