Rename projects name inside solution and code cleanup

--- a/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Model.Test/AdmissionCommittee.Model.Test.csproj
+++ b/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Model.Test/AdmissionCommittee.Model.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AdmissionCommittee\AdmissionCommittee.csproj" />
+    <ProjectReference Include="..\AdmissionCommittee.Model\AdmissionCommittee.Model.csproj" />
   </ItemGroup>
 
 </Project>
