Изменен нейминг неймспейсов, изменены названия папок и проектов. Добавлены коллекции классов *Connection в классы Building, Auction и Buyer. Изменены Fixture в соответствии с новыми полями классов. Изменены запросы из-за наличия новых полей.

--- a/Non-residentialFund/NonResidentialFundTests/NonResidentialFund.Tests.csproj
+++ b/Non-residentialFund/NonResidentialFundTests/NonResidentialFund.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Non_ResidentialFundTests</RootNamespace>
+    <RootNamespace>NonResidentialFund.Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Non-residentialFundDomain\Non-residentialFundDomain.csproj" />
+    <ProjectReference Include="..\NonResidentialFundDomain\NonResidentialFund.Domain.csproj" />
   </ItemGroup>
 
 </Project>
