--- a/Non-residentialFund/NonResidentialFundDomain/NonResidentialFund.Domain.csproj
+++ b/Non-residentialFund/NonResidentialFundDomain/NonResidentialFund.Domain.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Non_residentialFundDomain</RootNamespace>
+    <RootNamespace>NonResidentialFund.Domain</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
