--- a/ServiceOfTransportManagment/TransportManagment.Tests/TransportManagment.Classes.Tests.csproj
+++ b/ServiceOfTransportManagment/TransportManagment.Tests/TransportManagment.Classes.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,7 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-  	<ProjectReference Include="..\TransManagment\TransManagment.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\TransportManagment.Classes\TransportManagmentClasses.csproj" />
+	</ItemGroup>
 </Project>
