--- a/CarSharingTests/CarSharingTests.csproj
+++ b/CarSharingTests/CarSharingTests.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-
-    <IsPackable>false</IsPackable>
+	  <TargetFramework>net6.0</TargetFramework>
+	  <ImplicitUsings>enable</ImplicitUsings>
+	  <Nullable>enable</Nullable>
+	  <IsTestProject>true</IsTestProject>
+	  <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
