Исправлено: - хранение идентификаторов товаров в классе "StorageSell". - хранение идентификаторов товаров и их количества в классе "Invoice". - название проектов - название юнит-тестов

--- a/EnterpriseWarehouse/EnterpriseTests/Enterprise.Data.Tests.csproj
+++ b/EnterpriseWarehouse/EnterpriseTests/Enterprise.Data.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\EnterpriseData\EnterpriseData.csproj" />
+		<ProjectReference Include="..\EnterpriseData\Enterprise.Data.csproj" />
 	</ItemGroup>
 
 </Project>
