--- a/MusicMarketApp/TEST/TEST.csproj
+++ b/MusicMarketApp/TEST/TEST.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Music Marketplace\Music Marketplace.csproj" />
+    <ProjectReference Include="..\Music Marketplace\MusicMarketplace.csproj" />
   </ItemGroup>
 
 </Project>
