--- a/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
+++ b/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Music_Marketplace</RootNamespace>
+    <RootNamespace>MusicMarketplace</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
