added web api, renamed DataModel to Domain and added application for CRUD

--- a/DotNet2023.Lib/DotNet2023.DataBase/DotNet2023.DataBase.csproj
+++ b/DotNet2023.Lib/DotNet2023.DataBase/DotNet2023.DataBase.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DotNet2023.DataModel\DotNet2023.DataModel.csproj" />
+    <ProjectReference Include="..\DotNet2023.Domain\DotNet2023.Domain.csproj" />
   </ItemGroup>
 
 </Project>
