--- a/DotNet2023.WebApi/appsettings.json
+++ b/DotNet2023.WebApi/appsettings.json
@@ -2,7 +2,7 @@
     "Project": {
         "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Database=Net2023; Persist Security Info=false; User ID='sa'; Password='sa'; MultipleActiveResultSets=True; Trusted_Connection=False;",
         "Title": "Лабораторные работы по курсу \"Промышленное программирование\"",
-        "Description": "! Данный комментарий доступен только натуралам",
+        "Description": "Никифорова Дарья, 12 вариант",
         "Email": "n_daisy1@mail.ru"
     },
 
