--- a/DotNet2023.WebApi/DotNet2023.WebApi.csproj
+++ b/DotNet2023.WebApi/DotNet2023.WebApi.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DotNet2023.lib\DotNet2023.DataBase\DotNet2023.DataBase.csproj" />
     <ProjectReference Include="..\DotNet2023.lib\DotNet2023.Domain\DotNet2023.Domain.csproj" />
+    <ProjectReference Include="..\DotNet2023.lib\DotNet2023.Queries\DotNet2023.Queries.csproj" />
   </ItemGroup>
 
 </Project>
