--- a/DotNet2023.WebApi/appsettings.json
+++ b/DotNet2023.WebApi/appsettings.json
@@ -1,8 +1,8 @@
 {
     "Project": {
         "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Database=Net2023; Persist Security Info=false; User ID='sa'; Password='sa'; MultipleActiveResultSets=True; Trusted_Connection=False;",
-        "Title": "Лабораторные работы по курсу \"Промышленное программирование\"",
-        "Description": "Никифорова Дарья, 12 вариант",
+        "Title": "Р›Р°Р±РѕСЂР°С‚РѕСЂРЅС‹Рµ СЂР°Р±РѕС‚С‹ РїРѕ РєСѓСЂСЃСѓ \"РџСЂРѕРјС‹С€Р»РµРЅРЅРѕРµ РїСЂРѕРіСЂР°РјРјРёСЂРѕРІР°РЅРёРµ\"",
+        "Description": "РќРёРєРёС„РѕСЂРѕРІР° Р”Р°СЂСЊСЏ, 12 РІР°СЂРёР°РЅС‚",
         "Email": "n_daisy1@mail.ru"
     },
 
