Поменял названия файлов, исправил опечатки, привеёл к camelCase и PascalCase, ProductQuanity теперь ссылается на Product

--- a/Shop_class/xUnitTest/Shop.Test.csproj
+++ b/Shop_class/xUnitTest/Shop.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shop_class\Shop_class.csproj" />
+    <ProjectReference Include="..\Shop_class\Shop.Domain.csproj" />
   </ItemGroup>
 
 </Project>
