переименнованы проекты, исправленны найденные опечатки Изменены поля классов

--- a/Shop.class/Shop.Test/Shops.Test.csproj
+++ b/Shop.class/Shop.Test/Shops.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shop_class\Shop.Domain.csproj" />
+    <ProjectReference Include="..\Shop.Domain\Shops.Domain.csproj" />
   </ItemGroup>
 
 </Project>
