feat: add controllers, services and repositories.

--- a/SocialNetwork/SocialNetwork.Web/SocialNetwork.Web.csproj
+++ b/SocialNetwork/SocialNetwork.Web/SocialNetwork.Web.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SocialNetwork.Core\SocialNetwork.Core.csproj" />
+    <ProjectReference Include="..\SocialNetwork.Data\SocialNetwork.Data.csproj" />
     <ProjectReference Include="..\SocialNetwork.Domain\SocialNetwork.Domain.csproj" />
   </ItemGroup>
 
