--- a/SocialNetwork/SocialNetwork.Core/SocialNetwork.Core.csproj
+++ b/SocialNetwork/SocialNetwork.Core/SocialNetwork.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SocialNetwork.Domain\SocialNetwork.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
