--- a/SocialNetwork/SocialNetwork.Data/SocialNetwork.Data.csproj
+++ b/SocialNetwork/SocialNetwork.Data/SocialNetwork.Data.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <ProjectReference Include="..\SocialNetwork.Core\SocialNetwork.Core.csproj" />
   </ItemGroup>
 
 </Project>
