--- a/LibrarySchoolTest/LibrarySchoolTest.csproj
+++ b/LibrarySchoolTest/LibrarySchoolTest.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibrarySchoolServer\LibrarySchoolServer.csproj" />
     <ProjectReference Include="..\LibrarySchool\LibrarySchool.csproj" />
   </ItemGroup>
 
