Создан сервер, изменен namespace классов из 1 лабы, начало работы

--- a/FabricApp/Fabric.Test/Fabrics.Test.csproj
+++ b/FabricApp/Fabric.Test/Fabrics.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fabric.Domain\Fabric.Domain.csproj" />
+    <ProjectReference Include="..\Fabric.Domain\Fabrics.Domain.csproj" />
   </ItemGroup>
 
 </Project>
