Created tests, updated classes

--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Realtors\Realtors.csproj" />
+    <ProjectReference Include="..\realtor\realtor.csproj" />
   </ItemGroup>
 
 </Project>
