Добавлен проект NonResidentialFund.Server. Начата разработка контроллеров: написаны контроллеры для классов Building, Buyer, District, Organiaztion. Добавлен AutoMapper, созданы классы Dto. Изменен тип поля BuildDate на DateTime.

--- a/NonResidentialFund/NonResidentialFundDomain/NonResidentialFund.Domain.csproj
+++ b/NonResidentialFund/NonResidentialFundDomain/NonResidentialFund.Domain.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>NonResidentialFund.Domain</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
