--- a/DotNet2023.WebApi/appsettings.json
+++ b/DotNet2023.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
     "Project": {
-        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Database=Net2023; Persist Security Info=false; User ID='sa'; Password='sa'; MultipleActiveResultSets=True; Trusted_Connection=False;",
+        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Database=DotNet2023; Persist Security Info=false; User ID='sa'; Password='sa'; MultipleActiveResultSets=True; Trusted_Connection=False;",
         "Title": "Лабораторные работы по курсу \"Промышленное программирование\"",
         "Description": "Никифорова Дарья, 12 вариант",
         "Email": "n_daisy1@mail.ru"
