--- a/LibrarySchool.Server/LibrarySchool.Server.csproj
+++ b/LibrarySchool.Server/LibrarySchool.Server.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibrarySchool\LibrarySchool.csproj" />
+    <ProjectReference Include="..\LibrarySchool.Domain\LibrarySchool.Domain.csproj" />
   </ItemGroup>
 
 </Project>
