--- a/LibrarySchool.Domain.Test/LibrarySchool.Domain.Test.csproj
+++ b/LibrarySchool.Domain.Test/LibrarySchool.Domain.Test.csproj
@@ -22,8 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibrarySchoolServer\LibrarySchoolServer.csproj" />
-    <ProjectReference Include="..\LibrarySchool\LibrarySchool.csproj" />
+    <ProjectReference Include="..\LibrarySchool.Domain\LibrarySchool.Domain.csproj" />
   </ItemGroup>
 
 </Project>
