--- a/RentalService.Domain/RentalService.Domain.csproj
+++ b/RentalService.Domain/RentalService.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\RentalService.Domain.xml</DocumentationFile>
+    </PropertyGroup>
+
 </Project>
