--- a/Recruitment/RecruitmentAgency/ApplicationsServer/ApplicationsServer.csproj
+++ b/Recruitment/RecruitmentAgency/ApplicationsServer/ApplicationsServer.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<StartupObject>MyServer.Program</StartupObject>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<StartupObject>Server.Program</StartupObject>
 	</PropertyGroup>
 
 	<ItemGroup>
