Changed naming of the server namespace

--- a/Recruitment/RecruitmentAgency/ApplicationsServer/ApplicationsServer.csproj
+++ b/Recruitment/RecruitmentAgency/ApplicationsServer/ApplicationsServer.csproj
@@ -5,7 +5,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-		<StartupObject>Server.Program</StartupObject>
+		<StartupObject>ApplicationRecruitmentAgency.Server</StartupObject>
 	</PropertyGroup>
 
 	<ItemGroup>
