--- a/OrganizationEmployee/OrganizationServer/OrganizationServer.csproj
+++ b/OrganizationEmployee/OrganizationServer/OrganizationServer.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Новая папка1\**" />
+    <Content Remove="Новая папка1\**" />
+    <EmbeddedResource Remove="Новая папка1\**" />
+    <None Remove="Новая папка1\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -14,10 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmployeeDomain\EmployeeDomain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Новая папка1\" />
   </ItemGroup>
 
 </Project>
