Renamed project directories

--- a/RecruitmentAgency/RecruitmentAgency.Tests/RecruitmentAgency.Tests.csproj
+++ b/RecruitmentAgency/RecruitmentAgency.Tests/RecruitmentAgency.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\RecruitmentAgencyClasses\RecruitmentAgency.Classes.csproj" />
+    <ProjectReference Include="..\RecruitmentAgency.Classes\RecruitmentAgency.Classes.csproj" />
   </ItemGroup>
 
 </Project>
