--- a/ShopApp/Shops.Server/Shops.Server.csproj
+++ b/ShopApp/Shops.Server/Shops.Server.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <UserSecretsId>0a113857-84ab-4ca3-80da-d23c53522189</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
