--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,10 +8,7 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
