--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Install dependencies
+      run: |
+        dotnet add package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
+        dotnet add package Swashbuckle.AspNetCore --version 6.2.3
     - name: Build with dotnet
       run: dotnet build
     - name: Test with dotnet
