--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,7 +16,7 @@ jobs:
         dotnet-version: 6.0.x
     - name: Install dependencies
       run: |
-        dotnet add PONRF package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
-        dotnet add PONRF package Swashbuckle.AspNetCore --version 6.2.3
+        dotnet add PONRF\PonrfServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
+        dotnet add PONRF\PonrfServer package Swashbuckle.AspNetCore --version 6.2.3
     - name: Build with dotnet
       run: dotnet build
