--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,4 +19,4 @@ jobs:
         dotnet add PONRF\PonrfServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
         dotnet add PONRF\PonrfServer package Swashbuckle.AspNetCore --version 6.2.3
     - name: Build with dotnet
-      run: dotnet build
+      run: dotnet PONRF\PonrfServer build
