--- a/Warehouse/Warehouse.Tests/Warehouse.Tests.csproj
+++ b/Warehouse/Warehouse.Tests/Warehouse.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WareHouse\Warehouse.csproj" />
+    <ProjectReference Include="..\Warehouse.Domain\Warehouse.Domain.csproj" />
   </ItemGroup>
 
 </Project>
