--- a/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
+++ b/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>MusicMarketplace</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
