--- a/TaxiDepo/TaxiDepo.Classes/TaxiDepo.Classes.csproj
+++ b/TaxiDepo/TaxiDepo.Classes/TaxiDepo.Classes.csproj
@@ -7,4 +7,12 @@
         <RootNamespace>TaxiDepo.Classes</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\net6.0\TaxiDepo.Classes.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\net6.0\TaxiDepo.Classes.xml</DocumentationFile>
+    </PropertyGroup>
+
 </Project>
