--- a/SocialNetwork/SocialNetwork.Data/SocialNetwork.Data.csproj
+++ b/SocialNetwork/SocialNetwork.Data/SocialNetwork.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
