Create DbContext and make code-refactoring

--- a/Media/Media.Server/Media.Server.csproj
+++ b/Media/Media.Server/Media.Server.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>cfe91eaf-2554-4e7d-828f-2ec960049d30</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
