--- a/StoreApp/StoreApp.Domain/StoreApp.Domain.csproj
+++ b/StoreApp/StoreApp.Domain/StoreApp.Domain.csproj
@@ -7,4 +7,8 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
