--- a/Warehouse/Warehouse.Domain/Warehouse.Domain.csproj
+++ b/Warehouse/Warehouse.Domain/Warehouse.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
