--- a/Warehouse/Warehouse.Server/appsettings.json
+++ b/Warehouse/Warehouse.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
