--- a/PONRF/PonrfDomain/PonrfDomain.csproj
+++ b/PONRF/PonrfDomain/PonrfDomain.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.1" />
+  </ItemGroup>
 
 </Project>
