--- a/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Model/AdmissionCommittee.Model.csproj
+++ b/AdmissionCommittee/AdmissionCommittee/AdmissionCommittee.Model/AdmissionCommittee.Model.csproj
@@ -7,4 +7,8 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.10" />
+  </ItemGroup>
+
 </Project>
