--- a/Recruitment/RecruitmentAgency/RecruitmentAgencyServer/RecruitmentAgencyServer.csproj
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgencyServer/RecruitmentAgencyServer.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+		<PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 		<PackageReference Include="xunit.assert" Version="2.4.2" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
