--- a/BicycleRentals.Server/appsettings.Development.json
+++ b/BicycleRentals.Server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "BicycleRentals": "Server=localhost;Database=BicycleRentals;User=root;Password=250500"
   }
 }
