--- a/Recruitment/RecruitmentAgency/RecruitmentAgencyServer/RecruitmentAgencyServer.csproj
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgencyServer/RecruitmentAgencyServer.csproj
@@ -6,13 +6,20 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<StartupObject>RecruitmentAgencyServer.Server</StartupObject>
+		<UserSecretsId>3368f3f2-ae52-4d9f-9f74-59e27b173404</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.15">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 		<PackageReference Include="xunit.assert" Version="2.4.2" />
@@ -24,7 +31,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\RecruitmentAgency\RecruitmentAgency.csproj" />
+	  <ProjectReference Include="..\RecruitmentAgency\RecruitmentAgency.csproj" />
 	</ItemGroup>
 
 </Project>
