--- a/AirplaneBookingSystem/AirplaneBookingSystem.Server/AirplaneBookingSystem.Server.csproj
+++ b/AirplaneBookingSystem/AirplaneBookingSystem.Server/AirplaneBookingSystem.Server.csproj
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AirplaneBookingSystem.Domain\AirplaneBookingSystem.Domain.csproj" />
+    <ProjectReference Include="..\AirplaneBookingSystem.Model\AirplaneBookingSystem.Model.csproj" />
+    <ProjectReference Include="..\AirplaneBookingSystem.Tests\AirplaneBookingSystem.Tests.csproj" />
   </ItemGroup>
 
 </Project>
