--- a/Recruitment/RecruitmentAgency/IntegrationTests/IntegrationTests.csproj
+++ b/Recruitment/RecruitmentAgency/IntegrationTests/IntegrationTests.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+	  <XunitJson>xunit.runner.json</XunitJson>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.104" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.core" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
