--- a/SocialNetwork/SocialNetwork.Client/SocialNetwork.Client.csproj
+++ b/SocialNetwork/SocialNetwork.Client/SocialNetwork.Client.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" Namespace="SocialNetwork.Client" ClassName="ApiClient" />
+    <OpenApiReference Include="swagger.json" ClassName="ApiClient" CodeGenerator="NSwagCSharp" Namespace="SocialNetwork.Client" />
   </ItemGroup>
 
   <ItemGroup>
