--- a/TaxiDepo.Server/TaxiDepo.Server.csproj
+++ b/TaxiDepo.Server/TaxiDepo.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -6,7 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
             <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
         <RootNamespace>TaxiDepo.Server</RootNamespace>
-    </PropertyGroup>
+      <UserSecretsId>0a6e792f-32fd-44d6-acbd-60556fd182fb</UserSecretsId>
+  </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <DocumentationFile>bin\Debug\net6.0\TaxiDepo.Server.xml</DocumentationFile>
@@ -25,7 +26,14 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.16" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
+      <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
