change links, code cleanup, rename

--- a/TaxiDepo.Server/TaxiDepo.Server.csproj
+++ b/TaxiDepo.Server/TaxiDepo.Server.csproj
@@ -38,7 +38,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\TaxiDepo\TaxiDepo.Classes\TaxiDepo.Classes.csproj" />
+      <ProjectReference Include="..\TaxiDepo\TaxiDepo.Model\TaxiDepo.Model.csproj" />
     </ItemGroup>
 
 </Project>
