--- a/TaxiDepo/TaxiDepo.Model/TaxiDepo.Model.csproj
+++ b/TaxiDepo/TaxiDepo.Model/TaxiDepo.Model.csproj
@@ -4,15 +4,15 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>TaxiDepo.Classes</RootNamespace>
+        <RootNamespace>TaxiDepo.Model</RootNamespace>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <DocumentationFile>bin\Debug\net6.0\TaxiDepo.Classes.xml</DocumentationFile>
+      <DocumentationFile>bin\Debug\net6.0\TaxiDepo.Model.xml</DocumentationFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <DocumentationFile>bin\Release\net6.0\TaxiDepo.Classes.xml</DocumentationFile>
+      <DocumentationFile>bin\Release\net6.0\TaxiDepo.Model.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
