--- a/FabricApp/Fabric.Domain/Fabrics.Domain.csproj
+++ b/FabricApp/Fabric.Domain/Fabrics.Domain.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
