--- a/ShopApp/Shop.Domain/Shops.Domain.csproj
+++ b/ShopApp/Shop.Domain/Shops.Domain.csproj
@@ -7,4 +7,8 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.10" />
+  </ItemGroup>
+
 </Project>
