fixed logs, rewrote controllers for car, client and rental point, named columns for database in domain

--- a/CarApp/CarSharingServer/CarSharingServer.csproj
+++ b/CarApp/CarSharingServer/CarSharingServer.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <UserSecretsId>51b7894b-3a60-4bb0-8444-f21d8b6771af</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
