feat: add db models

--- a/SelectionCommittee/SelectionCommittee.Server/SelectionCommittee.Server.csproj
+++ b/SelectionCommittee/SelectionCommittee.Server/SelectionCommittee.Server.csproj
@@ -1,17 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>bd325a98-1f92-4ddc-a59d-b4149c37367f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SelectionCommittee.Domain\SelectionCommittee.Domain.csproj" />
+    <ProjectReference Include="..\SelectionCommittee.Model\SelectionCommittee.Model.csproj" />
   </ItemGroup>
 
 </Project>
