--- a/StoreApp/StoreApp.Server/StoreApp.Server.csproj
+++ b/StoreApp/StoreApp.Server/StoreApp.Server.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StoreApp.Domain\StoreApp.Domain.csproj" />
+    <ProjectReference Include="..\StoreApp.Domain\StoreApp.Model.csproj" />
   </ItemGroup>
 
 </Project>
