Добавлены комментарии к коду,  переименован проект с структурами данных с Domain на Model, соответственно изменен неймспейс.

--- a/NonResidentialFund/NonResidentialFundTests/NonResidentialFund.Tests.csproj
+++ b/NonResidentialFund/NonResidentialFundTests/NonResidentialFund.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NonResidentialFundDomain\NonResidentialFund.Domain.csproj" />
+    <ProjectReference Include="..\NonResidentialFundModel\NonResidentialFund.Model.csproj" />
   </ItemGroup>
 
 </Project>
