--- a/NonResidentialFund/NonResidentialFund.Server/NonResidentialFund.Server.csproj
+++ b/NonResidentialFund/NonResidentialFund.Server/NonResidentialFund.Server.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NonResidentialFundDomain\NonResidentialFund.Domain.csproj" />
+    <ProjectReference Include="..\NonResidentialFundModel\NonResidentialFund.Model.csproj" />
   </ItemGroup>
 
 </Project>
