--- a/NonResidentialFund/NonResidentialFundModel/NonResidentialFund.Model.csproj
+++ b/NonResidentialFund/NonResidentialFundModel/NonResidentialFund.Model.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>NonResidentialFund.Domain</RootNamespace>
+    <RootNamespace>NonResidentialFund.Model</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
