Добавлен DbContext, контроллеры исправлены на асинхронные

--- a/RentalService.Domain/RentalService.Domain.csproj
+++ b/RentalService.Domain/RentalService.Domain.csproj
@@ -10,4 +10,8 @@
         <DocumentationFile>bin\Debug\RentalService.Domain.xml</DocumentationFile>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+    </ItemGroup>
+
 </Project>
