--- a/ShopApp/Shops.Server/ShopsServer.csproj
+++ b/ShopApp/Shops.Server/ShopsServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shop.Domain\Shops.Domain.csproj" />
+    <ProjectReference Include="..\Shop.Domain\ShopsDomain.csproj" />
   </ItemGroup>
 
 </Project>
