--- a/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
+++ b/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
@@ -8,4 +8,8 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
